--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -7,3 +7,14 @@ $light-bg: #f0f1fd;
 $light-black: rgba(0, 0, 0, 0.8);
 $light-white: rgba(255, 255, 255, .8);
 $transition: all 0.3s ease;
+
+/* Slider custom properties */
+
+$background: hsl(210, 7%, 11%);
+$surface-variant: hsl(218, 8%, 28%);
+$secondary-container: hsl(218, 18%, 29%);
+$on-secondary-container: hsl(219, 70%, 91%);
+
+$radius-full: 50%;
+$radius-12: 12px;
+
