--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/* Slider custom properties */
 .about__section {
   padding: 5rem;
   background: #e3e6fc;
@@ -416,44 +417,178 @@ form div {
     width: 80%;
   }
 }
-section:has(.slider) {
-  background: #e3e6fc;
-  margin-top: -5rem;
-  margin-bottom: -10rem;
+img, button, ion-icon {
+  display: block;
+}
+
+img {
+  height: auto;
+  user-select: none;
+}
+
+button {
+  background: none;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+}
+
+body {
+  font-size: 1.6rem;
+  padding-block: 48px;
+  overflow-y: overlay;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 8px;
+}
+
+body:is(:hover, :focus-visible)::-webkit-scrollbar-thumb {
+  background-color: hsl(210, 7%, 11%);
+}
+
+.slider-section {
+  padding-inline: 8px;
+  display: grid;
+  gap: 24px;
+  background-color: #e3e6fc;
+  font-size: 62.5%;
 }
 
 .slider {
-  width: 50%;
-  height: auto;
-  margin: 5rem auto 0;
+  --slider-items:1;
+  /* mandatory para slider */
+  position: relative;
+  width: 100%;
+  padding-inline: 16px;
+  overflow-x: hidden;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.slider::before, .slider::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 24px;
+  height: 100%;
+  z-index: 1;
+  background-image: linear-gradient(to var(--gr-direction, right), #e3e6fc 0%, transparent 100%);
+}
+.slider::before {
+  left: 0;
+}
+.slider::after {
+  right: 0;
+  --gr-direction:left;
+}
+
+.slider-container {
+  position: relative;
+  /* mandatory para slider */
+  display: flex;
+  justify-content: flex-start;
+  transition: transform 250ms ease;
+}
+
+.slider-item {
+  min-width: calc(100% / var(--slider-items));
+  width: calc(100% / var(--slider-items));
+  padding-inline: 4px;
+}
+
+.slider-card {
+  background-color: hsl(218, 8%, 28%);
+  border-radius: 12px;
   overflow: hidden;
 }
 
-.slider-inner {
-  display: flex;
-  flex-wrap: nowrap;
-  height: 100%;
-  transition: all 1s ease-in-out;
-  width: 100%;
-}
-.slider-inner img {
-  aspect-ratio: 16/9;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
+.img-holder {
+  aspect-ratio: var(--width)/var(--height);
 }
 
-@media (width < 500px) {
-  .slider {
-    width: 90%;
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.btn-icon {
+  width: 40px;
+  height: 40px;
+  background-color: hsl(218, 18%, 29%);
+  color: hsl(219, 70%, 91%);
+  font-size: 2.4rem;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.5);
+}
+
+.slider-control {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.slider-control.prev {
+  left: 0;
+}
+.slider-control.next {
+  right: 0;
+}
+.slider-control:disabled {
+  display: none;
+}
+
+@media (min-width: 567px) {
+  .container {
+    max-width: 480px;
+    width: 100%;
+    margin-inline: auto;
+  }
+  .card-slider {
+    --slider-items:2;
   }
 }
-@media (width < 1030px) {
-  .slider {
-    width: 80%;
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
   }
-  section:has(.slider) {
-    margin-bottom: -40rem;
+  .card-slider {
+    --slider-items:3;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+  .card-slider {
+    --slider-items:4;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1150px;
+  }
+  .banner-slider {
+    --slider-items:2;
+  }
+  .card-slider {
+    --slider-items:5;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1400px;
   }
 }
 @font-face {
@@ -696,7 +831,7 @@ footer .logo:hover {
 .hero__section-content .scroll__down i {
   margin-left: 1rem;
 }
-.hero__section-content img {
+.hero__section-content img:not(.slider-card:has(img)) {
   height: 7rem;
   margin: 3rem auto;
   text-align: center;
