--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,6 +16,7 @@
         <nav>
           <a href="../index.html">Inicio</a>
           <a href="./about.html">Acerca de</a>
+          <a href="./gallery.html">Galería</a>
           <a href="#">Contacto</a>
         </nav>
         <button class="burger">
@@ -26,6 +27,7 @@
     <nav class="mobile-nav">
       <a href="../index.html">Inicio</a>
       <a href="./about.html">Acerca de</a>
+      <a href="./gallery.html">Galería</a>
       <a href="#">Contacto</a>
     </nav>
 
