--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -1,4 +1,4 @@
-img, button, ion-icon {
+img:not(.card__image-container > img), .btn-icon, ion-icon {
   display: block;
 }
 
@@ -7,7 +7,7 @@ img {
   user-select: none;
 }
 
-button {
+.btn-icon {
   background: none;
   border: none;
   font: inherit;
