--- a/scss/index.scss
+++ b/scss/index.scss
@@ -212,6 +212,19 @@ a {
     margin-left: 10%;
   }
 
+  footer {
+    & h4 {
+
+      font-size: 0.8rem;
+    }
+
+    & p {
+      font-size: 0.6rem;
+    }
+  }
+
+  
+
   
 }
 
