Modificados estilos dark mode - proyecto finalizado

--- a/scss/dark.scss
+++ b/scss/dark.scss
@@ -1,6 +1,4 @@
-
-  
-  .switch-container {
+.switch-container {
     display: flex;
     justify-content: flex-end;
     margin-right: 3rem;
@@ -24,19 +22,15 @@
       background: $btn-hover;
     }
   }
-  
-  body.dark .switch:hover {
-    background: orange;
-  }
-  
+
   .switch {
     &::after {
       content: "";
       display: block;
-      width: 30px;
-      height: 30px;
+      width: 25px;
+      height: 25px;
       position: absolute;
-      background: #f1f1f1;
+      background: $white-switch;
       top: 0;
       left: 0;
       right: unset;
@@ -46,7 +40,7 @@
     }
   
     &.active {
-      background-color: orange;
+      background-color: $orange;;
       color: #000;
   
       &::after {
@@ -56,8 +50,8 @@
     }
   
     span {
-      width: 30px;
-      height: 30px;
+      width: 25px;
+      height: 25px;
       line-height: 30px;
       display: flex;
       background: none;
@@ -66,16 +60,19 @@
       align-items: center;
     }
   }
-  
+
   body.dark {
-    background-color: hsl(210, 7%, 11%);
+    background-color: $background;
+    .switch:hover {
+      background: $orange;
+    }
 
     .hero__section::before {
-      background-color: hsl(210, 7%, 11%);
+      background-color: $background;
     }
 
     .about__section {
-      background-color: hsl(210, 7%, 11%);
+      background-color: $background;
       color: #e3e6fc;
 
       .square__container::after {
@@ -90,16 +87,16 @@
   
     .card__section {
       &::before {
-        background-color: hsl(210, 7%, 11%);
+        background-color: $background;
       }
 
   
-      background-color: hsl(210, 7%, 11%);
+      background-color: $background;
 
       .card {
-        background-color: hsl(210, 7%, 11%);
-        border-color: #e3e6fc;
-        color: #e3e6fc;
+        background-color: $background;
+        border-color: $primary-dark;
+        color: $primary-dark;
 
         &:hover {
             background: transparent;
@@ -108,30 +105,35 @@
     }
 
     nav.mobile-nav{
-        background-color: hsl(210, 7%, 11%);
+        background-color: $background;
 
         &.is-active {
-            background-color: hsl(210, 7%, 11%);
+            background-color: $background;
         }
     }
 
+    .hero__section-contact img {
+       
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
+    }
+
     .contact__section {
-        background-color: hsl(210, 7%, 11%);
+        background-color: $background;
 
         .contact__section-card {
-            background-color: hsl(210, 7%, 11%);
-            border-color: #e3e6fc;
+            background-color: $background;
+            border-color: $primary-dark;
 
             &:hover {
-                color: #e3e6fc;
+                color: $primary-dark;
             }
 
             a {
-                color: #e3e6fc;
+                color: $primary-dark;
 
                 &:hover {
                     color: #fff;
-                    text-decoration: underline solid #e3e6fc;
+                    text-decoration: underline solid $primary-dark;
                 }
             }
         }
@@ -170,25 +172,34 @@
             background-image: linear-gradient(to var(--gr-direction, right), $background 0%, transparent 100%);
         }
     }
+
+    header {
+      background-color: $header-footer;
+      margin-top: -5rem;
+      padding-top: 5rem;
+    }
   
     footer {
-      background-color: hsl(210, 7%, 11%);
+      background-color: $header-footer;
+      height: 100vh;
+      padding-top: 5rem;
+      margin-bottom: -5rem;
     }
   
     nav a, .text__section p, footer p {
-      color: #e3e6fc;
+      color: $primary-dark;
     }
   
     .footer__content-item {
-      color: #e3e6fc;
+      color: $primary-dark;
   
       a {
-        color: #e3e6fc;
+        color: $primary-dark;
       }
     }
   
     .footer__content-socials a {
-      color: hsl(219, 70%, 91%);
+      color: $secondary-dark;
     }
   
     .hero__section {
@@ -196,25 +207,17 @@
     }
   
     div.bar {
-      background-color: #e3e6fc;
+      background-color: $primary-dark;
     }
   
     .burger {
       &::before, &::after {
-        background-color: #e3e6fc;
+        background-color: $primary-dark;
       }
     }
   }
 
   .logo-dark:not(footer .logo) {
     margin-left: -9rem;
-  }
-  
-  .visible {
-    display: block;
-  }
-  
-  .hidden {
-    display: none !important;
   }
   
