--- a/css/index.css
+++ b/css/index.css
@@ -221,7 +221,7 @@ form fieldset .form-btn {
   padding: 0.8rem;
   background: #5b43b3;
   border-radius: 8px;
-  color: #fefefe;
+  color: #fff;
   width: 30%;
   margin-left: 2.8rem;
   cursor: pointer;
@@ -241,7 +241,7 @@ form div {
   display: none;
   border: 1px solid #5b43b3;
   border-radius: 5px;
-  background: #fefefe;
+  background: #fff;
   width: fit-content;
   padding: 2rem;
   margin: 0 auto;
@@ -294,7 +294,7 @@ form div {
   min-width: 15rem;
   min-height: 10rem;
   border-radius: 10px;
-  color: #fefefe;
+  color: #fff;
   transition: all 0.3s ease;
   line-height: 1.75;
 }
@@ -312,7 +312,7 @@ form div {
 }
 .contact__section-cards-container article a {
   text-decoration: none;
-  color: #fefefe;
+  color: #fff;
   transition: all 0.3s ease;
   font-size: 0.8rem;
 }
@@ -336,7 +336,7 @@ form div {
 }
 .hero__section-contact h1 {
   position: absolute;
-  color: #fefefe;
+  color: #fff;
   font-size: 2rem;
   top: 50%;
   left: calc(50% - 128.01px);
@@ -459,7 +459,7 @@ body {
 }
 
 body:is(:hover, :focus-visible)::-webkit-scrollbar-thumb {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
 }
 
 .slider-section {
@@ -621,15 +621,11 @@ body:is(:hover, :focus-visible)::-webkit-scrollbar-thumb {
   background: #7761c5;
 }
 
-body.dark .switch:hover {
-  background: orange;
-}
-
 .switch::after {
   content: "";
   display: block;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   position: absolute;
   background: #f1f1f1;
   top: 0;
@@ -648,8 +644,8 @@ body.dark .switch:hover {
   left: unset;
 }
 .switch span {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   line-height: 30px;
   display: flex;
   background: none;
@@ -659,13 +655,16 @@ body.dark .switch:hover {
 }
 
 body.dark {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
+}
+body.dark .switch:hover {
+  background: orange;
 }
 body.dark .hero__section::before {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
 }
 body.dark .about__section {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
   color: #e3e6fc;
 }
 body.dark .about__section .square__container::after {
@@ -675,13 +674,13 @@ body.dark .about__section .frame__container::after {
   border-color: hsl(218, 8%, 28%);
 }
 body.dark .card__section {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
 }
 body.dark .card__section::before {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
 }
 body.dark .card__section .card {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
   border-color: #e3e6fc;
   color: #e3e6fc;
 }
@@ -689,16 +688,19 @@ body.dark .card__section .card:hover {
   background: transparent;
 }
 body.dark nav.mobile-nav {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
 }
 body.dark nav.mobile-nav.is-active {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
+}
+body.dark .hero__section-contact img {
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
 }
 body.dark .contact__section {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
 }
 body.dark .contact__section .contact__section-card {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
   border-color: #e3e6fc;
 }
 body.dark .contact__section .contact__section-card:hover {
@@ -731,14 +733,22 @@ body.dark .contact__section legend {
   color: hsl(219, 70%, 91%);
 }
 body.dark .slider-section {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #1a1c1e;
 }
 body.dark .slider-section .slider::before,
 body.dark .slider-section .slider::after {
-  background-image: linear-gradient(to var(--gr-direction, right), hsl(210, 7%, 11%) 0%, transparent 100%);
+  background-image: linear-gradient(to var(--gr-direction, right), #1a1c1e 0%, transparent 100%);
+}
+body.dark header {
+  background-color: #393c40;
+  margin-top: -5rem;
+  padding-top: 5rem;
 }
 body.dark footer {
-  background-color: hsl(210, 7%, 11%);
+  background-color: #393c40;
+  height: 100vh;
+  padding-top: 5rem;
+  margin-bottom: -5rem;
 }
 body.dark nav a, body.dark .text__section p, body.dark footer p {
   color: #e3e6fc;
@@ -764,14 +774,6 @@ body.dark .burger::before, body.dark .burger::after {
 
 .logo-dark:not(footer .logo) {
   margin-left: -9rem;
-}
-
-.visible {
-  display: block;
-}
-
-.hidden {
-  display: none !important;
 }
 
 @font-face {
@@ -817,7 +819,7 @@ footer {
 body {
   font-family: "Montserrat-regular", sans-serif;
   font-size: 1rem;
-  background-color: #fefefe;
+  background-color: #fff;
   color: rgba(0, 0, 0, 0.8);
 }
 
@@ -901,13 +903,13 @@ a:hover {
   text-align: center;
   margin: 0 auto 16px;
   padding: 12px 16px;
-  color: #fefefe;
+  color: #fff;
   font-size: 1.5rem;
   font-weight: 600;
   letter-spacing: 1px;
 }
 .mobile-nav a:hover {
-  text-decoration: underline #fefefe;
+  text-decoration: underline #fff;
 }
 
 @media (width = 820px) {
@@ -999,7 +1001,7 @@ footer .logo:hover {
   align-items: center;
   flex-direction: column;
   position: relative;
-  color: #fefefe;
+  color: #fff;
   background-size: cover;
   overflow: hidden;
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
@@ -1020,7 +1022,7 @@ footer .logo:hover {
   left: 0;
   width: 100%;
   height: 70px;
-  background: #fefefe;
+  background: #fff;
   transform-origin: 0 100%;
   transform: skewY(2deg);
   z-index: 1;
@@ -1036,7 +1038,7 @@ footer .logo:hover {
   justify-content: center;
 }
 .scroll__down-container a {
-  color: #fefefe;
+  color: #fff;
   margin-top: -1rem;
   font-size: 1.2rem;
   animation: scale 1.5s infinite;
@@ -1097,7 +1099,7 @@ footer .logo:hover {
   left: 0;
   width: 100%;
   height: 70px;
-  background: #fefefe;
+  background: #fff;
   transform-origin: 0 100%;
   transform: skewY(-2deg);
   z-index: 1;
@@ -1117,7 +1119,7 @@ footer .logo:hover {
 }
 .card:hover {
   background: transparent;
-  color: #fefefe;
+  color: #fff;
   border: 1px solid #5b43b3;
 }
 .card img {
@@ -1137,7 +1139,7 @@ footer .logo:hover {
   border: none;
   padding: 0.8rem;
   border-radius: 5px;
-  color: #fefefe;
+  color: #fff;
   cursor: pointer;
   transition: all 0.3s ease;
   margin-bottom: 3rem;
@@ -1151,7 +1153,7 @@ footer .logo:hover {
   border: none;
   padding: 0.8rem;
   border-radius: 5px;
-  color: #fefefe;
+  color: #fff;
   cursor: pointer;
   transition: all 0.3s ease;
   margin-bottom: 3rem;
@@ -1170,7 +1172,7 @@ footer .logo:hover {
 
 footer {
   min-height: 30vh;
-  background: #fefefe;
+  background: #fff;
 }
 footer p {
   text-align: center;
