--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -9,19 +9,20 @@ $light-white: rgba(255, 255, 255, .8);
 $transition: all 0.3s ease;
 
 
-$background: hsl(210, 7%, 11%);
+$background: #1a1c1e;
 $surface-variant: hsl(218, 8%, 28%);
 $secondary-container: hsl(218, 18%, 29%);
 $on-secondary-container: hsl(219, 70%, 91%);
+$orange: orange;
+$white-switch: #f1f1f1;
+$primary-dark: #e3e6fc;
+$header-footer: #393c40;
+$secondary-dark: hsl(219, 70%, 91%);
 
 $radius-full: 50%;
 $radius-12: 12px;
 
-$darkGrey:rgb(34, 34, 34);
-$lightGrey:#bcbcbc;
-$lightGreyHover:#acabab;
-$black:#1f1e1e;
-$white:#fefefe;
+
 $darkShadow:2px 2px 10px rgba(170, 170, 170, 0.16);
 $lightShadow:10px 10px 20px rgba(0, 0, 0, 0.16);
 
