--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,7 +1,9 @@
+@use "variables" as v;
+
 .about__section {
   padding: 5rem;
   background: #e3e6fc;
-  color: $light-black;
+  color: v.$light-black;
   line-height: 1.75;
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -39,7 +41,7 @@
     content: '';
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, transparent, $btn-bg);
+    background: linear-gradient(45deg, transparent, v.$btn-bg);
     position: absolute;
     top: 0;
     left: 0;
