--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,8 +1,9 @@
-@import "./variables.scss";
-@import "./about.scss";
-@import "./contact.scss";
-@import "./slider.scss";
-@import "./dark.scss";
+@use "variables" as v;
+@use "about";
+@use "contact";
+@use "dark";
+@use "slider";
+
 
 @font-face {
   font-family: "Montserrat-italic";
@@ -54,22 +55,22 @@ footer {
 body {
   font-family: "Montserrat-regular", sans-serif;
   font-size: 1rem;
-  background-color: $white;
-  color: $light-black;
+  background-color: v.$white;
+  color: v.$light-black;
 }
 
 .social {
-  color: $btn-bg;
+  color: v.$btn-bg;
 }
 
 a {
   &:not(.social) {
-    color: $light-black;
+    color: v.$light-black;
     font-family: "Montserrat-italic", sans-serif;
   }
 
   &:hover {
-    text-decoration: underline $btn-bg;
+    text-decoration: underline v.$btn-bg;
   }
 }
 
@@ -84,7 +85,7 @@ a {
     margin: 1.5rem;
 
     &:hover {
-      text-decoration: underline $btn-bg;
+      text-decoration: underline v.$btn-bg;
     }
   }
 }
@@ -135,9 +136,9 @@ a {
   width: 100%;
   height: 100vh;
   z-index: 98;
-  background-color: $btn-bg;
+  background-color: v.$btn-bg;
   padding-top: 120px;
-  transition: $transition;
+  transition: v.$transition;
 
   &.is-active {
     left: 0;
@@ -150,13 +151,13 @@ a {
     text-align: center;
     margin: 0 auto 16px;
     padding: 12px 16px;
-    color: $white;
+    color: v.$white;
     font-size: 1.5rem;
     font-weight: 600;
     letter-spacing: 1px;
 
     &:hover {
-      text-decoration: underline $white;
+      text-decoration: underline v.$white;
     }
   }
 }
@@ -253,13 +254,13 @@ header {
 
   .logo:hover {
     transform: scale(1.1);
-    transition: $transition;
+    transition: v.$transition;
   }
 }
 
 footer .logo:hover {
   transform: scale(1.1);
-  transition: $transition;
+  transition: v.$transition;
 }
 
 .hero__section {
@@ -268,7 +269,7 @@ footer .logo:hover {
   align-items: center;
   flex-direction: column;
   position: relative;
-  color: $white;
+  color: v.$white;
   background-size: cover;
   overflow: hidden;
    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
@@ -288,7 +289,7 @@ footer .logo:hover {
     left: 0;
     width: 100%;
     height: 70px;
-    background: $white;
+    background: v.$white;
     transform-origin: 0 100%;
     transform: skewY(2deg);
     z-index: 1;
@@ -305,7 +306,7 @@ footer .logo:hover {
   justify-content: center;
 
   a {
-    color: $white;
+    color: v.$white;
     margin-top: -1rem;
     font-size: 1.2rem;
     animation: scale 1.5s infinite;
@@ -365,7 +366,7 @@ footer .logo:hover {
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 30px;
   background: url("../assets/img/bg.png");
-  background-color: $light-black;
+  background-color: v.$light-black;
 
   &::before {
     content: "";
@@ -374,7 +375,7 @@ footer .logo:hover {
     left: 0;
     width: 100%;
     height: 70px;
-    background: $white;
+    background: v.$white;
     transform-origin: 0 100%;
     transform: skewY(-2deg);
     z-index: 1;
@@ -383,20 +384,20 @@ footer .logo:hover {
 
 .card {
   flex: 1;
-  background: $light-bg;
+  background: v.$light-bg;
   text-align: center;
   width: 30rem;
   height: auto;
-  box-shadow: $shadow;
+  box-shadow: v.$shadow;
   border-radius: 10px;
-  color: $light-black;
+  color: v.$light-black;
   margin: 10rem auto 2rem;
-  transition: $transition;
+  transition: v.$transition;
 
   &:hover {
     background: transparent;
-    color: $white;
-    border: 1px solid $btn-bg;
+    color: v.$white;
+    border: 1px solid v.$btn-bg;
   }
 
   img {
@@ -414,13 +415,13 @@ footer .logo:hover {
 
   button {
     position: relative;
-    background-color: $btn-bg;
+    background-color: v.$btn-bg;
     border: none;
     padding: 0.8rem;
     border-radius: 5px;
-    color: $white;
+    color: v.$white;
     cursor: pointer;
-    transition: $transition;
+    transition: v.$transition;
     margin-bottom: 3rem;
     z-index: 2;
     font-family: "Playfair-regular", sans-serif;
@@ -429,20 +430,20 @@ footer .logo:hover {
 
 .close-btn {
   position: relative;
-  background-color: $btn-bg;
+  background-color: v.$btn-bg;
   border: none;
   padding: 0.8rem;
   border-radius: 5px;
-  color: $white;
+  color: v.$white;
   cursor: pointer;
-  transition: $transition;
+  transition: v.$transition;
   margin-bottom: 3rem;
   z-index: 2;
   font-family: "Playfair-regular", sans-serif;
 }
 
 .card button:hover, .close-btn:hover {
-  background-color: $btn-hover;
+  background-color: v.$btn-hover;
   transform: scale(1.1);
 }
 
@@ -452,7 +453,7 @@ footer .logo:hover {
 
 footer {
   min-height: 30vh;
-  background: $white;
+  background: v.$white;
 
   p {
     text-align: center;
@@ -481,7 +482,7 @@ footer {
     gap: 20px;
 
     li:hover {
-      transition: $transition;
+      transition: v.$transition;
     }
   }
 
@@ -511,7 +512,7 @@ footer {
 
     &:hover {
       transform: scale(1.1);
-      transition: $transition;
+      transition: v.$transition;
     }
   }
 }
